Added New Api and some code changes
